--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>KeycloakDemo</title>
-  <base href="/">
+  <script>
+    // Set base href dynamically
+    const baseHref = window.location.pathname.includes('ldang2k3') ? '/ldang2k3/' : '/';
+    document.write('<base href="' + baseHref + '">');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
